17 Jan 2004 mipsator
 * fixed specific deinstall stuff in Makefile.
 * fixed setting of shared lib cflags.
 * fixed init of ac_file and lang in global data.
 * added support for shared libs linking flags.

# snapshot 0.7.11

16 Jan 2004 mipsator
 * fixed parse_pc_file() to use pkgcell_init().
 * improved init of pmk's global data.
 * fixed some files to use our compatibility wrappers.

14 Jan 2004 mipsator
 * imported cfgtool.c and cfgtool.h to store config tool related code.
 * updated func.c to use cfgtool new functions.
 * moved config tool stuff from pkgconfig to cfgtool.
 * moved pmkcmd an pmkcmdopt typedefs to common.
 * improved pmkpc to fall back on config tool if module is not found.
 * added missing pkg-config options to pmkpc as 'not implemented' yet.

13 Jan 2004 mipsator
 * improved pmkpc to not care about argument order (like pkg-config).
 * added support for multiple module.
 * moved get_file_path() from functool to common.
 * moved process_opt() from pmk to parse.

12 Jan 2004 mipsator
 * imported preliminary code for our pkg-config alternative.
 * got rid of cfgrm, cfgum and config targets in Makefile template.
 * added showmode, sm and fclean targets in Makefile template.
 * modified clean target in Makefile template.
 * updated pmkcfg.sh and pmkfile to set the used mode.
 * added support for pmkpc in Makefile template.
 * removed Makefile which is now useless.
 * updated documentation.

11 Jan 2004 mipsator
 * added more C++ support in some checks (handle CXXFLAGS when needed).
 * improved some checks to be more verbose on used variables.
 * removed a fix into check_config() that was wrong.
 * added check_cfgt_data() to load config tool data only when needed.

# snapshot 0.7.10

08 Jan 2004 mipsator
 * fixed segfault on some platform when cleaning cfgtdata.

06 Jan 2004 mipsator
 * fixed recording of cfgtool path in pmk_check_config().

05 Jan 2004 mipsator
 * improved check_mode() in pmkinstall.c, patch provided by
						Pedro Martelletto.