@@ -1,0 +1,12 @@
+/* $Id$ */
+
+#include <stdio.h>
+
+#include "libhello.h"
+
+int main() {
+	print_hello();
+	printf(" ");
+	print_world();
+	printf(" !\n");
+}
