@@ -1,0 +1,11 @@
+/* $Id$ */
+
+#include <stdio.h>
+
+void print_hello(void) {
+	printf("Hello");
+}
+
+void print_world(void) {
+	printf("World");
+}
