@@ -1,0 +1,5 @@
+/* $Id$ */
+
+void	print_hello(void);
+void	print_world(void);
+
